[package]
name = "gkcsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
tokio = { version = "1.28", features = ["fs", "io-util", "macros", "time"] }
reqwest = { version = "0.11", features = ["json"] }
